Fix problem of overflowing

--- a/css/desktop/about/main.css
+++ b/css/desktop/about/main.css
@@ -1,25 +1,13 @@
-ul{
-  margin: 0;
-  padding: 0;
-}
-/* About */
-
-li{
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  width: 100%;
-}
-
 .about-contain{
   background-image: url("../../../images/cover.jpg");
   overflow-y: hidden;
-  height: 100%;
+  min-height: 120%;
 }
 
+/* About */
 .about-contain div{
   background-color: rgba(0,0,0,0.5);
-  height: 100%;
+  min-height: 100%;
 }
 
 .page-btn{
@@ -79,6 +67,8 @@ th,td{
 }
 
 .skill h1{
+  width: 100%;
+  text-align: center;
   animation: smooth-in 1s ease-in-out 1;
 }
 
